--- a/Homework-7/Page2.html
+++ b/Homework-7/Page2.html
@@ -20,11 +20,15 @@
                 font-family: 'Times New Roman', Times, serif;
                 color:aliceblue
             }
+            body  {
+  background-image: url("paper.gif");
+  background-color: #cccccc;
+}
         </style>
         <link rel="stylesheet" href="w3.css">
         
     </head>
-
+   
     <body>
         <h2><span> Gone by Micheal Grant </h2></span>
 
