--- a/Homework-6/Page1.html
+++ b/Homework-6/Page1.html
@@ -1,29 +1,94 @@
-<html>
-    <head>
-        <title> My first page</title>
-    </head>
-    <body>
-        <h1> My favorite activities and hobbies</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <link rel="stylesheet" href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\CSS\style.css" />
+    <link rel="stylesheet" href="CSS/fonts.css" />
+    <title>My first page</title>
+</head>
+
+<body>
+        <header>
+            <nav class="navbar">
+                <div class="menu-item">
+                    <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\index.html">Home</a>
+                </div>
+                <div class="dropdown">
+                    <a href="#" class="menu-item">More</a>
+                    <div class="dropdown-content">
+                        <div class="dropdown-item">
+                            <a href="gallery.html">Project 1</a>
+                        </div>
+                        <div class="dropdown-item">
+                            <a href="trivia.html">Project 2</a>
+                        </div>
+                        <div class="dropdown-item">
+                            <a href="gallery.html">Project 3</a>
+                        </div>
+                        <div class="dropdown-item">
+                            <a href="trivia.html">Project 4</a>
+                        </div>
+                        <div class="dropdown-item">
+                            <a href="gallery.html">Project 5</a>
+                        </div>
+                        <div class="dropdown-item">
+                            <a href="Page1.html">Project 6</a>
+                        </div>
+                        <div class="dropdown-item">
+                            <a href="gallery.html">Project 7</a>
+                        </div>
+                        <div class="dropdown-item">
+                            <a href="trivia.html">Project 8</a>
+                        </div>
+                        <div class="dropdown-item">
+                            <a href="gallery.html">Project 9</a>
+                        </div>
+                        <div class="dropdown-item">
+                            <a href="trivia.html">Project 10</a>
+                        </div>
+                        <div class="dropdown-item">
+                            <a href="gallery.html">Project 11</a>
+                        </div>
+                        <div class="dropdown-item">
+                            <a href="trivia.html">Project 12</a>
+                        </div>
+                        <div class="dropdown-item">
+                            <a href="gallery.html">Project 13</a>
+                        </div>
+                        <div class="dropdown-item">
+                            <a href="trivia.html">Project 14</a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </header>
+
+    <section>
+        <h1>My favorite activities and hobbies</h1>
         <ol>
             <li>Drawing</li>
             <li>Photography</li>
             <li>Video games</li>
             <li>Cooking</li>
         </ol>
-        <h2>My favorite resturants</h2>
+
+        <h2>My favorite restaurants</h2>
         <ol>
-            <li> <a href="https://sushimissoula.com">Sushi Hana</a> </li>
-            <li> <a href="https://www.zoothai.com">Zoo Thai</a> </li>
-            <li> <a href="https://liquidplanet.com">Liquid Planet</a> </li>
+            <li><a href="https://sushimissoula.com">Sushi Hana</a></li>
+            <li><a href="https://www.zoothai.com">Zoo Thai</a></li>
+            <li><a href="https://liquidplanet.com">Liquid Planet</a></li>
         </ol>
+
         <h2>My favorite websites</h2>
         <ol>
-            <li> <a href="https://bungiestore.com">Bungie</a> </li>
-            <li> <a href="https://collecticontoys.com">Collection Toys</a> </li>
+            <li><a href="https://bungiestore.com">Bungie</a></li>
+            <li><a href="https://collecticontoys.com">Collection Toys</a></li>
         </ol>
+
         <br>
-        <a href="Page2.html">Go to page 2</a></body>
-        <br>
-        <a href="Page3.html">Go to page 3</a></body>
-    </body>
+        <a href="Page2.html">Go to page 2</a><br>
+        <a href="Page3.html">Go to page 3</a>
+    </section>
+</body>
+
 </html>
