--- a/Homework-15/Projects/Project 1/index.html
+++ b/Homework-15/Projects/Project 1/index.html
@@ -13,7 +13,7 @@
              <a href="#" class="menu-item">More</a>
              <div class="dropdown-content">
                 <div class="dropdown-item">
-                   <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\Projects\Project 1\index.html">Project 1</a>
+                   <a href="Homework-15\Projects\Project 1\index.html">Project 1</a>
                 </div>
                 <div class="dropdown-item">
                    <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\Projects\Project 2\index.html">Project 2</a>
