--- a/Homework-15/Projects/Project 1/index1.html
+++ b/Homework-15/Projects/Project 1/index1.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
     <head>
         <title> Project 1</title>
         <link rel="stylesheet" href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\CSS\style.css"/>
