--- a/Homework-15/index.html
+++ b/Homework-15/index.html
@@ -16,7 +16,7 @@
           <a href="#" class="menu-item">More</a>
           <div class="dropdown-content">
              <div class="dropdown-item">
-                <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\Projects\Project 1\index.html">Project 1</a>
+                <a href="Projects/Project 1/index1.html">Project 1</a>
              </div>
              <div class="dropdown-item">
                 <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\Projects\Project 2\index.html">Project 2</a>
