--- a/Homework-15/Projects/Project 1/index.html
+++ b/Homework-15/Projects/Project 1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <head>
         <title> Project 1</title>
-        <link rel="stylesheet" href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\CSS\style.css"/>
+        <link rel="stylesheet" href="Homework-15\CSS\style.css"/>
         <link rel="stylesheet" href="CSS/fonts.css"/>
     </head>
     <header>
@@ -13,7 +13,7 @@
              <a href="#" class="menu-item">More</a>
              <div class="dropdown-content">
                 <div class="dropdown-item">
-                   <a href="index1.html">Project 1</a>
+                   <a href="Homework-15\Projects\Project 1\index.html">Project 1</a>
                 </div>
                 <div class="dropdown-item">
                    <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\Projects\Project 2\index.html">Project 2</a>
