--- a/Homework-15/Projects/Project 1/index.html
+++ b/Homework-15/Projects/Project 1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <head>
         <title> Project 1</title>
-        <link rel="stylesheet" href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\CSS\style.css"/>
+        <link rel="stylesheet" href="Homework-15\CSS\style.css"/>
         <link rel="stylesheet" href="CSS/fonts.css"/>
     </head>
     <header>
