--- a/Homework-15/Projects/Project 1/index.html
+++ b/Homework-15/Projects/Project 1/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
     <head>
         <title> Project 1</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="Homework-15\CSS\style.css"/>
     </head>
     <header>
