--- a/Homework-15/Projects/Project 1/index.html
+++ b/Homework-15/Projects/Project 1/index.html
@@ -3,6 +3,7 @@
         <title> Project 1</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="Homework-15\CSS\style.css"/>
     </head>
     <header>
         <nav class="navbar">
@@ -13,7 +14,7 @@
              <a href="#" class="menu-item">More</a>
              <div class="dropdown-content">
                 <div class="dropdown-item">
-                   <a href="Homework-15\Projects\Project 1\index.html">Project 1</a>
+                   <a href="index.html">Project 1</a>
                 </div>
                 <div class="dropdown-item">
                    <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\Projects\Project 2\index.html">Project 2</a>
