--- a/Homework-15/index.html
+++ b/Homework-15/index.html
@@ -2,20 +2,21 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="Homework-15\CSS\style.css"/>
+   <link rel="stylesheet" href="CSS/style.css"/>
+   <link rel="stylesheet" href="CSS/fonts.css"/>
    <title>All My Projects</title>
 </head>
 <body>
     <header>
         <nav class="navbar">
          <div class="menu-item">
-            <a href="Homework-15\index.html">Home</a>
+            <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\index.html">Home</a>
          </div>
        <div class="dropdown">
           <a href="#" class="menu-item">More</a>
           <div class="dropdown-content">
              <div class="dropdown-item">
-                <a href="Homework-15\Projects\Project 1\Project1.html">Project 1</a>
+                <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\Projects\Project 1\index.html">Project 1</a>
              </div>
              <div class="dropdown-item">
                 <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\Projects\Project 2\index.html">Project 2</a>
