--- a/Homework-15/index.html
+++ b/Homework-15/index.html
@@ -2,7 +2,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="Homework-15\CSS\style.css"/>
+   <link rel="stylesheet" href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\CSS\style.css"/>
    <link rel="stylesheet" href="CSS/fonts.css"/>
    <title>All My Projects</title>
 </head>
