--- a/Homework-15/Projects/Project 1/Project1.html
+++ b/Homework-15/Projects/Project 1/Project1.html
@@ -3,7 +3,7 @@
         <title> Project 1</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="Homework-15\CSS\style.css"/>
+        <link rel="stylesheet" href="CSS\style.css"/>
     </head>
     <header>
         <nav class="navbar">
