--- a/Homework-15/index.html
+++ b/Homework-15/index.html
@@ -9,7 +9,7 @@
     <header>
         <nav class="navbar">
          <div class="menu-item">
-            <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\index.html">Home</a>
+            <a href="../../../index.html">Home</a>
          </div>
        <div class="dropdown">
           <a href="#" class="menu-item">More</a>
