--- a/Homework-15/Projects/Project 2/Project2.html
+++ b/Homework-15/Projects/Project 2/Project2.html
@@ -15,7 +15,7 @@
                    <a href="../../Projects/Project 1/index.html">Project 1</a>
                 </div>
                 <div class="dropdown-item">
-                   <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\Projects\Project 2\index.html">Project 2</a>
+                   <a href="../../Projects/Project 2/index.html">Project 2</a>
                 </div>
                 <div class="dropdown-item">
                  <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\Projects\Project 3\index.html">Project 3</a>
