--- a/Homework-15/Projects/Project 1/Project1.html
+++ b/Homework-15/Projects/Project 1/Project1.html
@@ -5,6 +5,96 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="CSS\style.css"/>
     </head>
+    <style>
+      .navbar {
+          display: flex;
+          justify-content: space-between;
+          background-color: blanchedalmond;
+          font-family: 'PlayfairDisplay';
+          font-style: normal;
+          color: black; 
+          border-radius: 30px;
+          text-align: left;
+          margin: 10px;
+          height: 3em;
+          width: 98%;
+          padding: 0%;
+      }
+
+      .menu-item {
+          display: inline-block;
+          margin: 0 10;
+          min-width: 8em;
+          text-align: center;
+          background-color: transparent;
+          padding: 0.5em 0;
+      }
+
+      .menu-item a {
+          color: black;
+          font-family: serif;
+          text-decoration: none;
+          padding: 10px;
+      }
+
+      .menu-item:hover {
+          background-color: gray;
+          border-radius: 30px;
+      }
+
+      .dropdown {
+          display: inline-block;
+          font-family: serif;
+          margin: 0 10px;
+          min-width: 8em;
+          text-align: center;
+          background-color: transparent;
+          padding: 0.5em 0;
+          margin-right: 82%
+      }
+
+      .dropdown a {
+          color: black;
+          text-decoration: none;
+          font-family: serif;
+      }
+
+      .dropdown-content {
+          display: none;
+          font-family: serif;
+          position: absolute;
+          border: 2px solid saddlebrown;
+          margin: 0;
+          margin-top: 0.5em;
+          color: black;
+          background-color: blanchedalmond;
+          z-index: 1;
+      }
+
+      .dropdown-content a {
+          color: black;
+          font-family: serif;
+          display: block;
+          text-align: center;
+          margin: 0;
+          padding: 0.1em;
+          min-width: 7em;
+      }
+
+      .dropdown:hover .dropdown-content {
+          display: block;
+      }
+
+      .dropdown-item:hover, .dropdown-item:hover a {
+          color: black;
+          background-color: #a2a2a2;
+      }
+
+      span {
+          font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+          color: aquamarine;
+      }
+  </style>
     <header>
         <nav class="navbar">
             <div class="menu-item">
