--- a/Homework-15/Projects/Project 1/Project1.html
+++ b/Homework-15/Projects/Project 1/Project1.html
@@ -36,11 +36,11 @@
       margin: 0 10;
       min-width: 8em;
       text-align: center;
-      background-color: transparent; /* Set background color to transparent or another color */
+      background-color: transparent;
       padding: 0.5em 0;
    }
 
-   /* Style the links: */
+   
    .menu-item a {
       color: black;
       text-decoration: none;
@@ -51,13 +51,13 @@
       background-color: gray;
       border-radius: 30px;
    }
-   /* Add a dropdown feature: */
+   
    .dropdown {
       display: inline-block;
       margin: 0 10;
       min-width: 8em;
       text-align: center;
-      background-color: transparent; /* Set background color to transparent or another color */
+      background-color: transparent; 
       padding: 0.5em 0;
    }
 
@@ -73,7 +73,7 @@
       margin: 0;
       margin-top: 0.5em;
       color: black;
-      background-color: blanchedalmond; /* Set background color to transparent or another color */
+      background-color: blanchedalmond; 
       z-index: 1;
    }
 
@@ -85,7 +85,7 @@
       display: block;
    }
 
-   /* Style dropdown item display: */
+   
    .dropdown-item {
       display: block;
       text-align: center;
@@ -100,15 +100,15 @@
    }
 
    section {
-      margin-top: 20px; /* Add margin to create space between header and main content */
-      padding: 80px; /* Add padding for better visual separation */
+      margin-top: 20px; 
+      padding: 80px; 
    }
 
 
-      span {
-          font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-          color: aquamarine;
-      }
+   span {
+      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      color: aquamarine;
+   }
   </style>
     <header>
         <nav class="navbar">
