--- a/Homework-15/Projects/Project 9/index.html
+++ b/Homework-15/Projects/Project 9/index.html
@@ -6,6 +6,112 @@
         <link rel="stylesheet" href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\CSS\style.css"/>
         <link rel="stylesheet" href="CSS/fonts.css"/>
     </head>
+    <style>
+
+      header {
+    position: fixed;
+    background-color: blanchedalmond;
+    font-family: 'PlayfairDisplay';
+    font-style: normal;
+    color: black; 
+    border-radius: 30px;
+    text-align: left;
+    margin: 10px;
+    height: 3em;
+    width: 98%;
+    padding: 0%;
+ 
+   }
+
+   body {
+      margin: 0;
+      padding: 0;
+      background-color: burlywood;
+      font-family: 'PlayfairDisplay';
+      font-style: normal;
+      border: 5px solid sienna;
+      font-size: 20px;
+   }
+
+   .menu-item {
+      display: inline-block;
+      margin: 0 10;
+      min-width: 8em;
+      text-align: center;
+      background-color: transparent;
+      padding: 0.5em 0;
+   }
+
+   
+   .menu-item a {
+      color: black;
+      text-decoration: none;
+      padding: 10px;
+   }
+   
+   .menu-item:hover {
+      background-color: gray;
+      border-radius: 30px;
+   }
+   
+   .dropdown {
+      display: inline-block;
+      margin: 0 10;
+      min-width: 8em;
+      text-align: center;
+      background-color: transparent; 
+      padding: 0.5em 0;
+   }
+
+   .dropdown a {
+      color: black;
+      text-decoration: none;
+   }
+
+   .dropdown-content {
+      display: none;
+      position: absolute;
+      border: 2px solid saddlebrown;
+      margin: 0;
+      margin-top: 0.5em;
+      color: black;
+      background-color: blanchedalmond; 
+      z-index: 1;
+   }
+
+   .dropdown-content a {
+      color: black;
+   }
+
+   .dropdown:hover .dropdown-content {
+      display: block;
+   }
+
+   
+   .dropdown-item {
+      display: block;
+      text-align: center;
+      margin: 0;
+      padding: 0.5em;
+      min-width: 7em;
+   }
+
+   .dropdown-item:hover, .dropdown-item:hover a {
+      color: black;
+      background-color: #a2a2a2;
+   }
+
+   section {
+      margin-top: 20px; 
+      padding: 80px; 
+   }
+
+
+   span {
+      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      color: aquamarine;
+   }
+  </style>
     <header>
       <nav class="navbar">
         <div class="menu-item">
