--- a/Homework-15/Projects/Project 6/Page1.html
+++ b/Homework-15/Projects/Project 6/Page1.html
@@ -162,6 +162,7 @@ span {
      </nav>
 </header>
 <body>
+   <section>
     <p> This is where we started implementing code for websites having listed items and links to external sites. You can click page 2 and 3 to see my favorite artist and favorite author. </p>
     <section>
         <h1> My favorite activities and hobbies</h1>
@@ -188,4 +189,5 @@ span {
         <a href="Page3.html">Go to page 3</a></body>
     </seciton>
     </body>
+   </section>
 </html>
