--- a/Homework-15/Projects/Project 7/index.html
+++ b/Homework-15/Projects/Project 7/index.html
@@ -47,34 +47,23 @@
         }
 
         .menu-item {
-            display: inline-block;
-            margin: 0 10;
-            min-width: 8em;
-            text-align: center;
-            background-color: transparent; /* Set background color to transparent or another color */
-            padding: 0.5em 0;
-        }
-
-        /* Style the links: */
-        .menu-item a {
-            color: black;
-            text-decoration: none;
-            padding: 10px;
-        }
-        
-        .menu-item:hover {
-            background-color: gray;
-            border-radius: 30px;
-        }
-        /* Add a dropdown feature: */
-        .dropdown {
         display: inline-block;
-        margin: 0 10;
+        font-family: serif;
+        margin-right: 20px; /* Adjust the margin-right as needed */
         min-width: 8em;
         text-align: center;
-        background-color: transparent; /* Set background color to transparent or another color */
+        background-color: transparent; 
         padding: 0.5em 0;
-        }
+    }
+
+        .dropdown {
+        display: inline-block;
+        margin-right: 20px; /* Adjust the margin-right as needed */
+        min-width: 8em;
+        text-align: center;
+        background-color: transparent;
+        padding: 0.5em 0;
+    }
 
         .dropdown a {
         color: black;
@@ -86,6 +75,7 @@
         position: absolute;
         border: 2px solid saddlebrown;
         margin: 0;
+        font-family: serif;
         margin-top: 0.5em;
         color: black;
         background-color: blanchedalmond; /* Set background color to transparent or another color */
@@ -105,6 +95,7 @@
         display: block;
         text-align: center;
         margin: 0;
+        font-family: serif;
         padding: 0.5em;
         min-width: 7em;
         }
