--- a/Homework-15/Projects/Project 1/Project1.html
+++ b/Homework-15/Projects/Project 1/Project1.html
@@ -122,7 +122,7 @@
                    <a href="Projects\Project 1\Project1.html">Project 1</a>
                 </div>
                 <div class="dropdown-item">
-                   <a href="../Projects/Project 2/index.html">Project 2</a>
+                   <a href="..\Projects\Project 2\Project2.html">Project 2</a>
                 </div>
                 <div class="dropdown-item">
                  <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\Projects\Project 3\index.html">Project 3</a>
