--- a/Homework-15/Projects/Project 10/index.html
+++ b/Homework-15/Projects/Project 10/index.html
@@ -173,6 +173,7 @@
             document.getElementById("mouseX").textContent = mouseX;
             document.getElementById("mouseY").textContent = mouseY;
           });
+          console.log("Sketch.js script loaded!")
         </script>
         <script src="Sketch.js"></script>
       </body>
