--- a/Homework-15/Projects/Project 2/Project2.html
+++ b/Homework-15/Projects/Project 2/Project2.html
@@ -121,7 +121,7 @@
                    <a href="/../MART120/Homework-15/Projects/Project 1/Project1.html">Project 1</a>
                 </div>
                 <div class="dropdown-item">
-                   <a href="../../Projects/Project 2/index.html">Project 2</a>
+                   <a href="/../MART120/Homework-15/Projects/Project 2/Project2.html">Project 2</a>
                 </div>
                 <div class="dropdown-item">
                  <a href="/../MART120/Homework-15/Projects/Project 3/index.html">Project 3</a>
