--- a/Homework-15/Projects/Project 3/index.html
+++ b/Homework-15/Projects/Project 3/index.html
@@ -125,7 +125,7 @@
                    <a href="/../MART120/Homework-15/Projects/Project 2/Project2.html">Project 2</a>
                 </div>
                 <div class="dropdown-item">
-                 <a href="../../Projects/Project 3/index.html">Project 3</a>
+                 <a href="/../MART120/Homework-15/Projects/Project 3/index.html">Project 3</a>
               </div>
               <div class="dropdown-item">
                  <a href="/../MART120/Homework-15/Projects/Project 4/index.html">Project 4</a>
