--- a/Homework-15/Projects/Project 10/index.html
+++ b/Homework-15/Projects/Project 10/index.html
@@ -2,12 +2,8 @@
     <head>
         <title>First p5.js page</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
-        
         <link rel="stylesheet" href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\CSS\style.css"/>
-        <link rel="stylesheet" href="CSS/fonts.css"/>
-    
     <style>
-
       header {
     position: fixed;
     background-color: blanchedalmond;
@@ -116,49 +112,49 @@
     <header>
       <nav class="navbar">
         <div class="menu-item">
-           <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\index.html">Home</a>
+           <a href="/../MART120/Homework-15/index.html">Home</a>
         </div>
       <div class="dropdown">
          <a href="#" class="menu-item">More</a>
          <div class="dropdown-content">
             <div class="dropdown-item">
-               <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\Projects\Project 1\index.html">Project 1</a>
+               <a href="/../MART120/Homework-15/Projects/Project 1/Project1.html">Project 1</a>
             </div>
             <div class="dropdown-item">
-               <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\Projects\Project 2\index.html">Project 2</a>
+               <a href="/../MART120/Homework-15/Projects/Project 2/Project2.html">Project 2</a>
             </div>
             <div class="dropdown-item">
-             <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\Projects\Project 3\index.html">Project 3</a>
+             <a href="/../MART120/Homework-15/Projects/Project 3/index.html">Project 3</a>
           </div>
           <div class="dropdown-item">
-             <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\Projects\Project 4\index.html">Project 4</a>
+             <a href="/../MART120/Homework-15/Projects/Project 4/index.html">Project 4</a>
           </div>
           <div class="dropdown-item">
-             <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\Projects\Project 5\index.html">Project 5</a>
+             <a href="/../MART120/Homework-15/Projects/Project 5/index.html">Project 5</a>
           </div>
           <div class="dropdown-item">
-             <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\Projects\Project 6\Page1.html">Project 6</a>
+             <a href="/../MART120/Homework-15/Projects/Project 6/Page1.html">Project 6</a>
           </div>
           <div class="dropdown-item">
-             <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\Projects\Project 7\index.html"> Project 7 </a>
+             <a href="/../MART120/Homework-15/Projects/Project 7/index.html"> Project 7 </a>
           </div>
           <div class="dropdown-item">
-             <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\Projects\Project 8\Page3.html">Project 8</a>
+             <a href="/../MART120/Homework-15/Projects/Project 8/Page3.html">Project 8</a>
           </div>
           <div class="dropdown-item">
-             <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\Projects\Project 9\index.html">Project 9</a>
+             <a href="/../MART120/Homework-15/Projects/Project 9/index.html">Project 9</a>
           </div>
           <div class="dropdown-item">
-             <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\Projects\Project 10\index.html">Project 10</a>
+             <a href="/../MART120/Homework-15/Projects/Project 10/index.html">Project 10</a>
           </div>
           <div class="dropdown-item">
-             <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\Projects\Project 11\index.html">Project 11</a>
+             <a href="/../MART120/Homework-15/Projects/Project 11/index.html">Project 11</a>
           </div>
           <div class="dropdown-item">
-             <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\Projects\Project 12\index.html">Project 12</a>
+             <a href="/../MART120/Homework-15/Projects/Project 12/index.html">Project 12</a>
           </div>
           <div class="dropdown-item">
-             <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\Projects\Project 14\index.html">Project 14</a>
+             <a href="/../MART120/Homework-15/Projects/Project 14/index.html">Project 14</a>
           </div>
      </nav>
    </header>
@@ -173,7 +169,6 @@
             document.getElementById("mouseX").textContent = mouseX;
             document.getElementById("mouseY").textContent = mouseY;
           });
-          console.log("Sketch.js script loaded!")
         </script>
         <script src="Sketch.js"></script>
       </body>
