--- a/Homework-15/Projects/Project 2/Project2.html
+++ b/Homework-15/Projects/Project 2/Project2.html
@@ -112,7 +112,7 @@
     <header>
         <nav class="navbar">
             <div class="menu-item">
-               <a href="../../../index.html">Home</a>
+               <a href="/../MART120/Homework-15/index.html">Home</a>
             </div>
           <div class="dropdown">
              <a href="#" class="menu-item">More</a>
