--- a/Homework-15/Projects/Project 6/Page1.html
+++ b/Homework-15/Projects/Project 6/Page1.html
@@ -115,7 +115,7 @@ span {
 <header>
     <nav class="navbar">
         <div class="menu-item">
-           <a href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\index.html">Home</a>
+           <a href="/../MART120/Homework-15/index.html">Home</a>
         </div>
       <div class="dropdown">
          <a href="#" class="menu-item">More</a>
