--- a/Homework-15/Projects/Project 6/Page1.html
+++ b/Homework-15/Projects/Project 6/Page1.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\CSS\style.css"/>
     <link rel="stylesheet" href="CSS/fonts.css"/>
-    <title> My first page</title>
+    <title> Project 6</title>
 </head>
 <style>
 
