--- a/Homework-15/Projects/Project 7/index.html
+++ b/Homework-15/Projects/Project 7/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -111,7 +111,7 @@
         }
 
     </style>
-    <title>Project 7!</title>
+    <title>Project 7</title>
 </head>
 
 <body>
