--- a/Homework-15/Projects/Project 8/Page3.html
+++ b/Homework-15/Projects/Project 8/Page3.html
@@ -86,7 +86,7 @@
             margin-right: auto;
         }
     </style>
-    <title>Contact Us</title>
+    <title>Project 8</title>
 </head>
 
 <body>
