--- a/Homework-15/Projects/Project 9/index.html
+++ b/Homework-15/Projects/Project 9/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>First p5.js page</title>
+        <title>Project 9</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
         <script src="Sketch.js"></script>
         <link rel="stylesheet" href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\CSS\style.css"/>
