--- a/Homework-15/Projects/Project 7/index.html
+++ b/Homework-15/Projects/Project 7/index.html
@@ -49,7 +49,7 @@
         .menu-item {
         display: inline-block;
         font-family: serif;
-        margin-right: 20px; /* Adjust the margin-right as needed */
+        margin-right: 20px; 
         min-width: 8em;
         text-align: center;
         background-color: transparent; 
@@ -58,7 +58,7 @@
 
         .dropdown {
         display: inline-block;
-        margin-right: 20px; /* Adjust the margin-right as needed */
+        margin-right: 20px; 
         min-width: 8em;
         text-align: center;
         background-color: transparent;
@@ -78,7 +78,7 @@
         font-family: serif;
         margin-top: 0.5em;
         color: black;
-        background-color: blanchedalmond; /* Set background color to transparent or another color */
+        background-color: blanchedalmond; 
         z-index: 1;
         }
 
@@ -90,7 +90,7 @@
         display: block;
         }
 
-        /* Style dropdown item display: */
+        
         .dropdown-item {
         display: block;
         text-align: center;
@@ -106,8 +106,8 @@
         }
 
         section {
-        margin-top: 20px; /* Add margin to create space between header and main content */
-        padding: 80px; /* Add padding for better visual separation */
+        margin-top: 20px; 
+        padding: 80px; 
         }
 
     </style>
