--- a/Homework-15/Projects/Project 10/index.html
+++ b/Homework-15/Projects/Project 10/index.html
@@ -3,6 +3,7 @@
         <title>Project 10</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
         <link rel="stylesheet" href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\CSS\style.css"/>
+        <script src="/../MART120/Homework-15/Projects/Project 10/sketch.js"></script>
     <style>
       header {
     position: fixed;
@@ -170,7 +171,7 @@
             document.getElementById("mouseY").textContent = mouseY;
           });
         </script>
-        <script src="Sketch.js"></script>
+        
       </body>
     </section>
 </html>
