--- a/Homework-15/Projects/Project 14/index.html
+++ b/Homework-15/Projects/Project 14/index.html
@@ -2,7 +2,7 @@
     <head>
         <title> Project 14</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
-        <script src="Sketch.js"></script>
+        <script src="/../MART120/Homework-15/Projects/Project 14/sketch.js"></script>
         <link rel="stylesheet" href="C:\Users\Gweni\Documents\GitHub\MART120\Homework-15\CSS\style.css"/>
     </head>
     <style>
