--- a/Homework-15/Projects/Project 4/index.html
+++ b/Homework-15/Projects/Project 4/index.html
@@ -161,10 +161,9 @@
     <body>
       <p>This week we did a Play Lab link and a Mobile App link and made small mini games from studio code. </p>
         <p> 
-            <link a href="https://studio.code.org/projects/applab/lkq3isRRX8Bj_qMoaqzddJeDWjKk1DQRGb8UUr9SIug"> Mobile App a/>
+            <a href="https://studio.code.org/projects/applab/lkq3isRRX8Bj_qMoaqzddJeDWjKk1DQRGb8UUr9SIug" style="text-decoration:none" target="_new"> Mobile App </a>
             
-            Play Lab
-            https://studio.code.org/c/2027342386
+            <a href= "https://studio.code.org/c/2027342386" style="text-decoration:none" target="_new"> Play Lab</a>
         </p>
     </body>
 </section>
