--- a/Homework-15/Projects/Project 3/index.html
+++ b/Homework-15/Projects/Project 3/index.html
@@ -160,7 +160,10 @@
      </header>
      <section>
     <body>
-        <p> Scratch </p>
+        <p>
+         For this assignment we worked on a website called scratch. We created characters, backgrounds and broadcasting. So, we made a small short story. 
+         <a href="https://scratch.mit.edu/projects/935707973">My Scratch Project</a>
+        </p>
     </body>
 </section>
 </html>
